[第一行Android]bug修复，两个。开心>_<

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".News.NewsContentActivity">
+        <activity android:name=".NewsPackage.NewsContentActivity">
         </activity>
     </application>
 
