--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     </uses-permission>
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!--<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>-->
 
     <application
         android:allowBackup="true"
@@ -30,7 +32,7 @@
 
         <activity android:name=".BroadcastTest.MainContentActivity"/>
         <activity android:name=".BroadcastTest.StartLoginActivity"/>
-
+        <activity android:name=".FileAndDb.EditBoxSaveActivity"/>
         <!--<receiver android:name=""-->
     </application>
 
