--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <!--<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>-->
 
     <application
+        android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -33,6 +34,7 @@
         <activity android:name=".BroadcastTest.MainContentActivity"/>
         <activity android:name=".BroadcastTest.StartLoginActivity"/>
         <activity android:name=".FileAndDb.EditBoxSaveActivity"/>
+        <activity android:name=".BookPackage.BuyBookActivity"/>
         <!--<receiver android:name=""-->
     </application>
 
