--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/> -->
     <application
         android:name="org.litepal.LitePalApplication"
@@ -30,12 +31,23 @@
         <activity android:name=".FileAndDb.EditBoxSaveActivity" />
         <activity android:name=".BookPackage.BuyBookActivity" />
         <activity android:name=".ContentProvider.ReadPhoneActivity" />
+        <activity android:name=".Notification.MyNotificationActivity" />
         <!-- <receiver android:name="" -->
+        <!--<provider-->
+            <!--android:name=".MyContentProvider"-->
+            <!--android:authorities="com.example.root.studyview.BookPackage.provider"-->
+            <!--android:enabled="true"-->
+            <!--android:exported="true"></provider>-->
+
         <provider
-            android:name=".MyContentProvider"
-            android:authorities="com.example.root.studyview.BookPackage.provider"
-            android:enabled="true"
-            android:exported="true"></provider>
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.root.studyview.fileprovider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
     </application>
 
 </manifest>
