[第一行Android]第八章。调取相册+播放音频

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".BookPackage.BuyBookActivity" />
         <activity android:name=".ContentProvider.ReadPhoneActivity" />
         <activity android:name=".Notification.MyNotificationActivity" />
+        <activity android:name=".Notification.MyPlayerActivity" />
         <!-- <receiver android:name="" -->
         <!--<provider-->
             <!--android:name=".MyContentProvider"-->
