[第一行Android]第九章GSON方式解析json

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".Notification.MyNotificationActivity" />
         <activity android:name=".Notification.MyPlayerActivity" />
         <activity android:name=".Web.WebViewAcitvity" />
+        <activity android:name=".Web.JsonViewActivity" />
         <!-- <receiver android:name="" -->
         <!--<provider-->
             <!--android:name=".MyContentProvider"-->
