--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,17 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION " />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION " />
+
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE " />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE " />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE " />
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE " />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS " />
+    <uses-permission android:name="android.permission.WAKE_LOCK " />
+
     <!-- <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/> -->
     <application
         android:name="org.litepal.LitePalApplication"
@@ -20,6 +31,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="RgPkunvnPbjcf3MLZCAcpvIszU0ECtrg">
+        </meta-data>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,6 +55,7 @@
         <activity android:name=".Web.WebViewAcitvity" />
         <activity android:name=".Web.JsonViewActivity" />
         <activity android:name=".Services.BtnChangeTextActivity" />
+        <activity android:name=".Baidu.BaiduLocationActivity" />
         <!-- <receiver android:name="" -->
         <!-- <provider -->
         <!-- android:name=".MyContentProvider" -->
@@ -59,6 +77,12 @@
             android:name=".Services.DownloadService"
             android:enabled="true"
             android:exported="true"></service>
+
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote">
+        </service>
     </application>
 
 </manifest>
