--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".Web.JsonViewActivity" />
         <activity android:name=".Services.BtnChangeTextActivity" />
         <activity android:name=".Baidu.BaiduLocationActivity" />
+        <activity android:name=".MaterialDesign.MyToolBarActivity" />
         <!-- <receiver android:name="" -->
         <!-- <provider -->
         <!-- android:name=".MyContentProvider" -->
