--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'org.litepal.android:java:3.0.0'
     implementation 'com.google.code.gson:gson:2.7'
     implementation("com.squareup.okhttp3:okhttp:4.4.0")
+    implementation ('com.android.support:design:24.2.1')
+    implementation ('de.hdodenhof:circleimageview:2.2.0')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
