--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <activity android:name=".Services.BtnChangeTextActivity" />
         <activity android:name=".Baidu.BaiduLocationActivity" />
         <activity android:name=".MaterialDesign.MyToolBarActivity" />
+        <activity android:name=".MaterialDesign.MyFloatingButtonActivity" />
         <!-- <receiver android:name="" -->
         <!-- <provider -->
         <!-- android:name=".MyContentProvider" -->
